# dioxus-charts

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  Makefile.toml  README.md  release.toml
.github/workflows/: publish.yml  release-drafter.yml
examples/: Cargo.toml  Makefile.toml  desktop.rs  tailwind.config.js  web.rs
examples/demo/: Cargo.toml  Makefile.toml  mod.rs
examples/demo/src/: input.scss  lib.rs
examples/desktop/: Cargo.toml  Makefile.toml  index.html
examples/desktop/src/: main.rs
examples/public/: tailwind.css
examples/web/: Cargo.toml  Makefile.toml  index.html  tailwind.config.js
examples/web/src/: main.rs
src/: grid.rs  lib.rs  types.rs  utils.rs
src/charts/: bar.rs  line.rs  pie.rs
