[package]
name = "dioxus-charts"
version = "0.1.2"
authors = ["Hilton Medeiros"]
edition = "2021"
description = "A chart components library for dioxus"
repository = "https://github.com/hiltonm/dioxus-charts"
license = "MIT OR Apache-2.0"
keywords = ["ui", "gui", "react", "wasm", "dioxus"]
categories = ["wasm", "gui", "web-programming"]

[dependencies]
log = "0.4"
dioxus = { version = "0.4.0", default-features = false, features = ["macro", "html"] }

[profile.release]
lto = true
