[package]
name = "dioxus-charts"
version = "0.3.0"
authors = ["Hilton Medeiros"]
edition = "2021"
description = "Chart components library for Dioxus"
repository = "https://github.com/dioxus-community/dioxus-charts"
license = "MIT OR Apache-2.0"
keywords = ["ui", "gui", "react", "wasm", "dioxus"]
categories = ["wasm", "gui", "web-programming"]

[dependencies]
log = "0.4"
dioxus = { version = "0.6", default-features = false, features = ["launch", "macro", "html", "signals"] }

[profile.release]
lto = true
