[package]
name = "charts-desktop-demo"
version = "0.1.0"
authors = ["Hilton Medeiros"]
edition = "2021"
description = "A dioxus-charts desktop demo"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
log = "0.4"
env_logger = "0.10"
dioxus-desktop = "0.3.0"
charts-demo = { path = "../demo" }
