[package]
name = "charts-web-demo"
version = "0.1.0"
authors = ["Hilton Medeiros"]
edition = "2021"
description = "A dioxus-charts web demo"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
log = "0.4"
env_logger = "0.10"
dioxus = { version = "0.5", features = ["web"] }
charts-demo = { path = "../demo" }
